Kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: site-deployment
spec:
  replicas: 20
  selector:
    matchLabels:
      app: site
  template:
    metadata:
      labels:
        app: site
    spec:
      containers:
      - name: website-container
        image: alesson23/site:v1
        ports:
        - containerPort: 80
