Kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: site--service
spec:
  type: LoadBalancer
  selector:
    app: site
  ports:
  - name: http
    port: 80
    targetPort: 80
