Kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: site
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: alessonviana.tech
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: site
              port:
                number: 80
